--- a/src/Pages/Home/Services/css/Service.css
+++ b/src/Pages/Home/Services/css/Service.css
@@ -1,3 +1,13 @@
 .card-img-top {
   height: 300px;
 }
+.service-bg {
+  background-color: #181824 !important;
+}
+.card-hover {
+  transition: all 0.3s;
+}
+.card-hover:hover {
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+}
